[package]
authors = ["The Tor Project",
           "Isis Lovecruft <isis@torproject.org>"]
name = "dalek"
version = "0.0.1"
publish = false

[lib]
name = "dalek"
path = "lib.rs"
crate_type = ["rlib", "staticlib"]

[dependencies]
libc = "=0.2.39"

crypto = { path = "../crypto" }

[dependencies.ed25519-dalek]
version = "=0.6.2"
features = ["nightly", "std"]
